--- a/src/main/resources/assets/extraplanets/lang/de_DE.lang
+++ b/src/main/resources/assets/extraplanets/lang/de_DE.lang
@@ -48,6 +48,8 @@ planet.haumea=Haumea
 planet.MercuryEP=Merkur 2.0
 planet.CeresEP=Ceres 2.0
 planet.JupiterEP=Jupiter 2.0
+planet.SaturnEP=Saturn 2.0
+planet.UranusEP=Uranus 2.0
 planet.NeptuneEP=Neptun 2.0
 planet.PlutoEP=Zwergplanet Pluto 2.0
 
@@ -105,7 +107,10 @@ moon.ioEP=Io 2.0
 moon.deimosEP=Deimos 2.0
 moon.phobosEP=Phobos 2.0
 moon.oberonEP=Oberon 2.0
-moon.titanEP=Titan 2.0 ##NEEDS TRANSLATE##
+moon.titanEP=Titan 2.0
+moon.rheaEP=Rhea 2.0
+moon.iapetusEP=Iapetus 2.0
+moon.titaniaEP=Titania 2.0
 
 #Planet Blocks
 tile.mercury.surface.name=Merkur Oberflächengestein
