--- a/src/main/resources/assets/extraplanets/lang/ru_RU.lang
+++ b/src/main/resources/assets/extraplanets/lang/ru_RU.lang
@@ -48,6 +48,8 @@ planet.haumea=Хаумеа
 planet.MercuryEP=Меркурий 2.0
 planet.CeresEP=Церера 2.0
 planet.JupiterEP=Юпитер 2.0
+planet.SaturnEP=Сатурн 2.0
+planet.UranusEP=Уран 2.0
 planet.NeptuneEP=Нептун 2.0
 planet.PlutoEP=Плутон 2.0
 
@@ -105,7 +107,10 @@ moon.ioEP=Ио 2.0
 moon.deimosEP=Феймос 2.0
 moon.phobosEP=Фобос 2.0
 moon.oberonEP=Оберон 2.0
-moon.titanEP=Titan 2.0 ##NEEDS TRANSLATE##
+moon.titanEP=Титан 2.0
+moon.rheaEP=Рея 2.0
+moon.iapetusEP=Япет 2.0
+moon.titaniaEP=Титания 2.0 ##NEEDS TRANSLATE##
 
 #Planet Blocks
 tile.mercury.surface.name=Поверхность Меркурия
