--- a/src/main/resources/assets/extraplanets/lang/cs_CZ.lang
+++ b/src/main/resources/assets/extraplanets/lang/cs_CZ.lang
@@ -48,6 +48,8 @@ planet.haumea=Haumea
 planet.MercuryEP=Merkur 2.0
 planet.CeresEP=Ceres 2.0
 planet.JupiterEP=Jupiter 2.0
+planet.SaturnEP=Saturn 2.0
+planet.UranusEP=Uran 2.0
 planet.NeptuneEP=Neptun 2.0
 planet.PlutoEP=Pluto 2.0
 
@@ -106,6 +108,9 @@ moon.deimosEP=Deimos 2.0 ##NEEDS TRANSLATE##
 moon.phobosEP=Phobos 2.0 ##NEEDS TRANSLATE##
 moon.oberonEP=Oberon 2.0 ##NEEDS TRANSLATE##
 moon.titanEP=Titan 2.0 ##NEEDS TRANSLATE##
+moon.rheaEP=Rhea 2.0 ##NEEDS TRANSLATE##
+moon.iapetusEP=Iapetus 2.0 ##NEEDS TRANSLATE##
+moon.titaniaEP=Titania 2.0 ##NEEDS TRANSLATE##
 
 #Planet Blocks
 tile.mercury.surface.name=Povrchový kámen z Merkuru
