--- a/src/main/resources/assets/extraplanets/lang/tr_TR.lang
+++ b/src/main/resources/assets/extraplanets/lang/tr_TR.lang
@@ -48,6 +48,8 @@ planet.haumea=Haumea
 planet.MercuryEP=Merkür 2.0
 planet.CeresEP=Ceres 2.0
 planet.JupiterEP=Jüpiter 2.0
+planet.SaturnEP=Uranüs 2.0
+planet.UranusEP=Neptün 2.0
 planet.NeptuneEP=Neptün 2.0
 planet.PlutoEP=Pluto 2.0
 
@@ -105,7 +107,10 @@ moon.ioEP=Io 2.0
 moon.deimosEP=Deimos 2.0
 moon.phobosEP=Rezzan 2.0
 moon.oberonEP=Oberon 2.0
-moon.titanEP=Titan 2.0 ##NEEDS TRANSLATE##
+moon.titanEP=Titan 2.0
+moon.rheaEP=Rhea 2.0
+moon.iapetusEP=Iapetus 2.0
+moon.titaniaEP=Titanya 2.0
 
 #Planet Blocks
 tile.mercury.surface.name=Merkür Yüzey Kayası
