--- a/src/main/resources/assets/extraplanets/lang/es_ES.lang
+++ b/src/main/resources/assets/extraplanets/lang/es_ES.lang
@@ -1437,7 +1437,7 @@ achievement.craft_rocket_10.desc=Crea un Cohete Nivel 10
 
 #Liquids/Fluid
 tile.glowstone.name=Piedra luminosa líquida
-tile.magma.name=Magma líquido
+tile.magma_block.name=Magma líquido
 tile.nitrogen.name=Nitrógeno líquido
 tile.frozen_water.name=Agua Congelada
 tile.salt.name=Agua Líquida Cristalizada
